--- a/scratch/.gitignore
+++ b/scratch/.gitignore
@@ -1,6 +1,7 @@
-# Ignore everything on scratch by default, except the provided examples
+# Ignore everything on scratch by default, except for the examples provided
 /*
 !.gitignore
 
 !test1.cc
+
 
